--- a/olm-catalog/next/channel.yaml
+++ b/olm-catalog/next/channel.yaml
@@ -15,3 +15,5 @@ package: eclipse-che
 name: next
 entries:
   - name: eclipse-che.v7.56.0-724.next
+  - name: eclipse-che.v7.57.0-725.next
+    replaces: eclipse-che.v7.56.0-724.next
