--- a/olm-catalog/next/channel.yaml
+++ b/olm-catalog/next/channel.yaml
@@ -17,3 +17,5 @@ entries:
   - name: eclipse-che.v7.56.0-724.next
   - name: eclipse-che.v7.57.0-725.next
     replaces: eclipse-che.v7.56.0-724.next
+  - name: eclipse-che.v7.57.0-726.next
+    replaces: eclipse-che.v7.57.0-725.next
