--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -17,3 +17,5 @@ entries:
   - name: eclipse-che.v7.55.0
   - name: eclipse-che.v7.56.0
     replaces: eclipse-che.v7.55.0
+  - name: eclipse-che.v7.57.0
+    replaces: eclipse-che.v7.56.0
